# CareerTunerPortfolios

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEPLOY.md  PUBLIC_RELEASE_MANIFEST.md  PUBLIC_REPOSITORY_BOUNDARIES.md  README.md  SECURITY.md  build.gradle  design-progress.md  design.md  docker-compose.prod.yml  docker-compose.yml  settings.gradle
.claude/: launch.json
.github/: actionlint.yaml  dependabot.yml
.github/scripts/: apply-db-patches.sh  ensure_aasa_nginx_location.py  test_db_patch_deployment.py  test_ensure_aasa_nginx_location.py
.github/workflows/: 4090-job-trigger.yml  android-release.yml  demo-readiness-scope.yml  deploy-backend.yml  deploy-demo.yml  deploy-web.yml  desktop-release.yml  frontend-ci.yml  ios-build.yml  pages.yml  service-pipeline-ci.yml
.obsidian/: app.json  appearance.json  templates.json
.obsidian/snippets/: careertuner-vault.css
Obsidian/: README.md  app.js  index.html  styles.css
Obsidian/SecondBrain/: README.md  app.js  graph-data.js  index.html  styles.css
Obsidian/Wiki/: README.md  app.js  index.html  styles.css  wiki-data.js
admin-frontend/: README.md
backend/: .dockerignore  Dockerfile  README.md  build.gradle  gradle.properties
backend/data/: block-rule-cache.json
config/: README.md  environments.json
data/: README.md  block-rule-cache.json
desktop/: .gitignore  CMakeLists.txt  README.md  main.cpp
desktop/core/: AdClient.cpp  AdClient.h  AiChargeCoordinator.cpp  AiChargeCoordinator.h  ApiClient.cpp  ApiClient.h  AuthService.cpp  AuthService.h  AutoPrepRunner.cpp  AutoPrepRunner.h  CameraRecorder.cpp  CameraRecorder.h  CollaborationClient.cpp  CollaborationClient.h  CommunityClient.cpp  CommunityClient.h  ConsentClient.cpp  ConsentClient.h  InterviewSession.cpp  InterviewSession.h  JobModel.cpp  JobModel.h  NotificationPoller.cpp  NotificationPoller.h  PlannerClient.cpp  PlannerClient.h  PlannerOverlayController.cpp  PlannerOverlayController.h  SettingsStore.cpp  SettingsStore.h  SseClient.cpp  SseClient.h  VoiceRecorder.cpp  VoiceRecorder.h
desktop/packaging/windows/: installer.nsi.in  portable.nsi.in
desktop/qml/: BoardPage.qml  CollaborationPage.qml  DashboardPage.qml  DevicesPage.qml  HomeView.qml  Icon.qml  InputBar.qml  JobDetailPage.qml  LoginPage.qml  Main.qml  NewJobDialog.qml  NotificationCenter.qml  PhoneMirror.qml  PhonePanel.qml  PlannerOverlay.qml  PracticePage.qml  ReportPage.qml  ReportView.qml  SessionThread.qml  SettingsPage.qml  Theme.qml
desktop/scripts/: package-windows.ps1
desktop/tests/: DesktopCoreTests.cpp
docs/: 00_KNOWLEDGE_MAP.md  AI_CAREER_STRATEGY_EVIDENCE_GATE_DESIGN.md  AI_JOB_POSTING_PIPELINE_RUNBOOK.md  AI_ORCHESTRATOR.html  AI_ORCHESTRATOR.md  AI_REPOSITORY_BOUNDARIES.md  ARCHITECTURE.md  BRANCHES.md  C_FEATURE_VERIFICATION.md  ENVIRONMENTS.md  FEATURE_MODULE_STRUCTURE.md  FEATURE_OWNERSHIP.md  F_B인계_공고추출_트랜잭션분리.md  F_CHATBOT_AUDIT.md  GPU_CONCURRENCY_POLICY.md  MERGE_DEV_RECONCILIATION.md  OBSIDIAN.md  PERSONAL_BLOCK_POLICY.md  PRODUCT_STRUCTURE.md  README.md  REALDATA_RUNBOOK.md  RELEASE.md  TEAM_WORK_DISTRIBUTION.md  TRIPTOGETHER_PARITY.md  desktop-app-concept.html  desktop-app-prototype.html  desktop-app-stack.html  desktop-app-v2-mockup.html  mobile-app-v2-mockup.html  깡통계정_온보딩_설계문서.md
docs/AI_REPORT/: CAREERTUNER_SELF_AI_MODEL_DEEP_DIVE.md  README.md
docs/ai-artifacts/: README.md
docs/ai-reports/: README.md
docs/ai-training/: README.md  dataset-schema.md  generate_profile_ai_expanded_samples.py  generate_profile_ai_seed_samples.py  infer_qwen3_profile_lora.py  profile_ai_data_quality_checklist.md  profile_ai_dataset_manual_review.md  profile_ai_seed_samples.jsonl  profile_ai_training_samples_100.jsonl  profile_ai_training_samples_300.jsonl  profile_ai_training_samples_500.jsonl  qwen3_qlora_training_runbook.md  requirements-qlora.txt  serve_profile_ai_model.py  train_qwen3_profile_qlora.py  training-runbook.md  validate_profile_ai_dataset.py
docs/archive/: README.md
docs/class-diagrams/: README.md  a_part_class_diagram.html
docs/db/: README.md  a_part_db_design.html
docs/obsidian-vault/: README.md
docs/operations/: 4090_OLLAMA_TAILSCALE_POLICY.md  DEMO_CLIENT_SETUP.md  MODEL_REGISTRY.md  README.md  real-data-runbook.md
docs/ops/: 4090_CONNECTIVITY_HARDENING_PLAN.md  4090_GITHUB_ACTIONS_TAILSCALE_POC.md  4090_MCP_SERVER_POC_PLAN.md  4090_POWER_AND_AVAILABILITY_RUNBOOK.md
docs/planning/: README.md  기획.md  기획.txt  담당별_자체LLM_운영안.md  디자인 분석.md  디자인 분석.txt  면접 자율 에이전트 로드맵.md  모바일 고려.md  모바일 고려.txt  모바일_앱_정책_초안.md  자체LLM_팀_도입안.md  추천 구조.md  추천 구조.txt
docs/storyboard/: .gitignore  README.md
docs/verification/: DEMO_READINESS_LEDGER.md  README.md  c-feature-verification.md  demo-readiness-checks.json
features/: README.md
frontend/: .env.aws  .env.domain  .env.example  .env.localhost  .env.mock  .env.sites  .env.tailscale  .gitignore  ATTRIBUTIONS.md  MOBILE_BUILD.md  README.md  build-app-realdata.bat  capacitor.config.js  capacitor.config.json  capacitor.config.ts  index.html  package-lock.json  package.json  patch-android-manifest.ps1  patch-ios-info.ps1  run-app-livereload.bat  tsconfig.json  vite.config.ts
frontend/.openai/: hosting.json
frontend/android/: .gitignore  variables.gradle
frontend/public/: manifest.webmanifest  push-sw.js
frontend/scripts/: assetlinks-core.mjs  build-demo-apk.mjs  cap-sync-with-env.mjs  capacitor-config-policy.cjs  configure-ios-associated-domains.mjs  generate-apple-app-site-association.mjs  generate-assetlinks.mjs  generate-icons.mjs  ios-universal-links-core.mjs  test-admin-access.mjs  test-application-demo.mjs  test-c-demo-readiness.mjs  (+19 more)
ml/: README.md
portfolio-docs/: admin.md  ai-integration.md  application-case.md  architecture.md  auth.md  autoprep.md  billing.md  community.md  company-job-analysis.md  correction.md  data-lifecycle.md  fit-analysis.md  index.md  interview.md  model-evidence.md  notification.md  overview.md  package-lock.json  package.json  platform.md  profile.md  release-readiness.md  second-brain.md  security.md  verification.md
scripts/: README.md
(+3377 files in other folders)
